--- a/css/main.css
+++ b/css/main.css
@@ -89,17 +89,17 @@ header>p{
 }
 .container_circle{
     position: absolute;
-    margin:200px 00px 0px 600px;
+    margin:200px 00px 0px 40%;
 }
 
 .container_circle div{
-    width: 100px;
-    height: 100px;
+    width: 80px;
+    height: 80px;
     border-radius: 50%;
     background-color:var(--blue);
     filter: blur(36px);
     display: inline-block;
-    margin: 50px;
+    margin: 30px;
 }
 
 .subtitle_top *{
@@ -208,7 +208,6 @@ section{
 .streng >div{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    width: 1379px;
 
 }
 
@@ -224,7 +223,7 @@ section{
 }
 
 .proyect_card {
-    width: 1379px;
+
     display: flex;
     align-items: flex-start;
 }
@@ -256,8 +255,8 @@ section{
 
 .proyect_card_text_div1{
     width: 600px;
-
 }
+
 .proyect_card_text_div2 {
     -webkit-transform: rotate(90deg);
     width: 20px;
@@ -285,7 +284,6 @@ margin: 0px;
     }
 
 .contact>div{
-    width: 1379px;
 text-align: center;
 margin: 40px;
 }
@@ -375,4 +373,132 @@ footer{
     height: 60px;
     margin: 0px -70px;
     z-index: 0;
+}
+.foo{
+    color: var(--blue);
+}
+
+@media (max-width: 1000px) {
+
+    .container_circle{
+        position: absolute;
+        margin:500px 00px 0px 300px;
+    }
+    
+    .container_circle div{
+        width: 50px;
+        height: 50px;
+        margin: 30px;
+    }
+    section{
+        width: 90%;
+    }
+
+
+    .studies_content{
+        margin: 10px;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+    }
+    
+    .studies_content div{
+        display: inline;
+        
+    }
+    
+    .studies_content_p{
+        width: 100%;
+        height: 300px;
+        margin: 0px;
+        order: 3;
+    }
+
+    .studies_content_p >p{
+    }
+    
+    
+    .studies_content >.studies_content_title{
+        display: flex;
+        order: 2;
+        
+    }
+    
+    .studies_content >.studies_content_title >h3{
+        -webkit-transform: rotate(0deg);       
+    }
+    
+    .studies_content_table{
+        order: 1;
+        margin: 0px 0px;
+    }
+    
+    .line{
+        width: 300px;
+        height: 20px;
+    }
+
+
+
+
+
+    .streng >div{
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 50px 0px;
+    
+    }
+    
+    .streng >div>div{
+        grid-column: 1 / 4;
+        width: 90%;
+        box-sizing: border-box;
+        margin: 0px 0px;
+        
+    }
+
+    .proyect_card{
+        flex-direction: column;
+        margin: 50px 0px;
+    }
+    
+    .proyect_card >div {
+        display: inline;
+        width: 90%;
+    }
+
+    .proyect_card >.proyect_card_text{
+        height: auto;
+        order: 1;
+    }
+    
+    .proyect_card_imagen img {
+        width: 100%;
+        height: 100%;
+        display: inline-block;
+        object-fit: cover;
+    }
+    .proyect_card_text_div1{
+        width: 100%;
+    }
+    
+    .proyect_card_imagen  {
+        order: 2;
+    }
+
+    .contact>div{
+        text-align: center;
+    }
+
+    .link{
+        width: auto;
+    }
+
+    .credits_blur{
+
+        width: 500px;
+        height: 150px;
+        margin: 0px -50px;
+
+    }
 }
